# aiohttpretty

./: .cz.toml  .gitattributes  .gitignore  AUTHORS.rst  CHANGELOG  CHANGELOG.md  CONTRIBUTING.rst  Makefile  README.md  README.rst  aiohttpretty.py  conftest.py  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
aiohttpretty/: __init__.py  exc.py  helpers.py  main.py  main.pyi  plugin.py  types.py
tests/: conftest.py  test_general.py  tests_general.py
