[tool.poetry]
name = "aiohttpretty"
version = "22.0.0"
description = "AioHTTPretty"
authors = [
    "Gustavo Correa <self.gustavocorrea@gmail.com>",
    "Center for Open Science <contact@cos.i>",
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3',
]


[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
furl = "^2.1.3"
multidict = "^6.0.2"
yarl = "^1.7.2"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
isort = "^5.10.1"
pytest = "^7.1.2"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"

[tool.poetry.plugins]
pytest11 = { aiohttpretty = 'aiohttpretty.plugin' }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
